--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div id="bb">
       <span>Feliz aniversário bb! Espero que tu seja muito feliz no seu dia e em todo o resto, por mais bosta 
         que esteja o mundo. Tu é foda, do seu profissional até esse coração. Que tu conquiste o seu mundo, meu bem!</span>
-        <span>Amo você!</span>
+        <span>Amo você!!</span>
     </header>
     </div>
 
